# Pyablo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  example.py  main.cpp  pyproject.toml  test.py
docs/: API_REF_en.md  API_REF_fr
examples/: 3dtest.xmf  blast.h5  blast.xmf  test.py
includes/: Snapshot.h  Structs.h  Utils.h  XdmfReader.h
src/: XdmfReader.cpp  pyablo.cpp
src/pyablo/: __init__.py  __init__.pyi
srcs/: Snapshot.cpp  Utils.cpp  XdmfReader.cpp  pyablo.cpp  pydy.cpp
